# module-dependency

./: .mypy.ini  CHANGELOG.md  README.md  main.py  mkdocs.yaml  pyproject.toml  requirements.txt  setup.py  test.py  test_dep.py
.github/workflows/: docs.yaml  release.yml
docs/: ARCHITECTURE.md  README.md  REFERENCES.md
docs/reference/: cli.md  core.md
src/: container.py  core.py  graph.py  inject.py  loader.py  main.json  main.py  mixin.py  resolver.py  service.py  test.py
src/app/: __init__.py  main.py
src/core/: __init__.py  loader.py
src/core/resolver/: __init__.py  errors.py  utils.py
src/dependencies/: container.py  injection.py  loader.py  resolver.py
src/dependencies/resolver/: __init__.py  errors.py
src/dependency/cli/: loader.py
src/dependency/core/: __init__.py  container.py  exceptions.py  loader.py
src/dependency/core2/: __init__.py  container.py  exceptions.py
src/environment/: default.py
src/example/app/: __init__.py  main.py  module.py
src/example/module/: __init__ copy.py  __init__.py
src/example/plugin/: __init__.py
src/example/services/: __init__.py
src/manager/: __init__.py  container.py
src/manager/manager1/: __init__.py  container.py  mixin.py
src/manager/type1/: __init__.py  container.py
src/patterns/: composite.py  decorator.py
src/plugin/: __init__.py  container.py  providers.py
src/plugin/client/: __init__.py  container.py
src/plugin/manager/: __init__.py  container.py
src/plugin/type1/: __init__.py  container.py
src/service1/: __init__.py  container.py  inject.py  mixin.py
src/service1/implementation/: __init__.py  container.py
src/service1/instance1/: __init__.py  container.py
src/service2/: __init__.py  container.py  mixin.py
src/service2/implementation/: __init__.py  container.py
src/service2/instance1/: __init__.py  container.py
src/services/: __init__.py  container.py  mixin.py  providers.py
src/services/service1/: mixin.py  (+1 more)
test/: test1.py
tests/core/: test_agrupation.py  test_declaration.py  test_detectcycle.py  test_exceptions.py  test_injection.py  test_interfaces.py  test_products.py  test_providers.py  test_resolution.py  test_resource.py  test_validation.py
tests/example/: test_application.py  test_component.py  test_module.py
(+297 files in other folders)
